--- a/ai-solutions-client/package.json
+++ b/ai-solutions-client/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.503.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
