--- a/ai-solutions-client/package.json
+++ b/ai-solutions-client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "firebase": "^11.6.1",
@@ -17,8 +18,8 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.503.0",
     "match-sorter": "^8.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
@@ -26,6 +27,7 @@
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.21.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
